--- a/AdminLTE/Views/Home/Index.cshtml
+++ b/AdminLTE/Views/Home/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿<environment names="Development">
-    <link href="~/lib/plugins/datatables-bs4/css/dataTables.bootstrap4.css" rel="stylesheet"asp-append-version="true"  />
+    <link href="~/lib/plugins/datatables-bs4/css/dataTables.bootstrap4.css" rel="stylesheet" asp-append-version="true" />
+    <link href="~/lib/plugins/datatables-bs4/css/dataTables.bootstrap4.css" rel="stylesheet" />
 </environment>
 <environment names="Staging,Production">
     <link href="~/lib/plugins/datatables-bs4/css/dataTables.bootstrap4.min.css" rel="stylesheet" asp-append-version="true" />
@@ -16,7 +17,7 @@
 
 <div class="box">
     <div class="box-body table-responsive">
-        <table class="table table-bordered table-hover" id="TableId" cellspacing="0" align="center">
+        <table class="table table-condensed table-bordered table-striped" id="TableId" cellspacing="0" align="center">
             <thead>
                 <tr>
                     <th>Sr</th>
