--- a/AdminLTE/Views/Shared/Components/Sidebar/Default.cshtml
+++ b/AdminLTE/Views/Shared/Components/Sidebar/Default.cshtml
@@ -4,9 +4,9 @@
         <aside class="main-sidebar sidebar-dark-primary elevation-4">
             <!-- Brand Logo -->
             <a href="/" class="brand-link">
-                <img src="~/lib/admin-lte/dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
+                <img src="~/IMG/Login/Sistema.png" width="100" height="100" alt="Sistema Logo" class="brand-image img-circle elevation-3"
                      style="opacity: .8">
-                <span class="brand-text font-weight-light">AdminLTE 3</span>
+                <span class="brand-text font-weight-light">Sistema</span>
             </a>
 
             <!-- sidebar: style can be found in sidebar.less -->
@@ -39,7 +39,7 @@
                         {
                             if (menu.Type == SidebarMenuType.Header)
                             {
-                                <li class="nav-link">@menu.Name</li>
+                                @*<li class="nav-link">@menu.Name</li>*@
                             }
                             else if (menu.Type == SidebarMenuType.Link)
                             {
