--- a/AdminLTE/Views/UserLogs/Index.cshtml
+++ b/AdminLTE/Views/UserLogs/Index.cshtml
@@ -11,7 +11,7 @@
 <h2>@ViewData["Title"].</h2>
 
 <br>
-<table class="table" id="myTable">
+<table class="table table-condensed table-bordered table-striped" id="myTable">
     <thead>
         <tr>
             <th>
