--- a/AdminLTE/Views/SuperAdmin/Edit.cshtml
+++ b/AdminLTE/Views/SuperAdmin/Edit.cshtml
@@ -15,9 +15,15 @@
         </div>
     </div>
     <div class="form-group">
-        <label class="control-label col-sm-2" asp-for="UserName">Name: </label>
+        <label class="control-label col-sm-2" asp-for="UserName">Nombre: </label>
         <div class="col-sm-4">
             <input class="form-control" asp-for="UserName" />
+        </div>
+    </div>
+    <div class="form-group">
+        <label class="control-label col-sm-2" asp-for="PhoneNumber">Numero de Telefono: </label>
+        <div class="col-sm-4">
+            <input class="form-control" asp-for="PhoneNumber" />
         </div>
     </div>
     <div class="form-group">
