--- a/AdminLTE/wwwroot/css/Login1.css
+++ b/AdminLTE/wwwroot/css/Login1.css
@@ -13,6 +13,9 @@
 }
 
 .ads {
+    background-image: url("../IMG/Login/Sistema.png");
+    background-repeat: no-repeat;
+    background-size: 400px 400px;
     background-color: #000;
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
