--- a/AdminLTE/Views/Docs/Edit.cshtml
+++ b/AdminLTE/Views/Docs/Edit.cshtml
@@ -15,8 +15,8 @@
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="Id_Usuario" class="control-label"></label>
-                <input asp-for="Id_Usuario" class="form-control" />
-                <span asp-validation-for="Id_Usuario" class="text-danger"></span>
+                <input asp-for="Id_Usuario" class="form-control" disabled/>
+                <span asp-validation-for="Id_Usuario" class="text-danger" ></span>
             </div>
             <div class="form-group">
                 <label asp-for="Tipo_documento" class="control-label"></label>
@@ -45,7 +45,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Fecha_Creado" class="control-label"></label>
-                <input asp-for="Fecha_Creado" class="form-control" />
+                <input asp-for="Fecha_Creado" class="form-control" disabled/>
                 <span asp-validation-for="Fecha_Creado" class="text-danger"></span>
             </div>
             <div class="form-group">
