--- a/AdminLTE/Views/Docs/Create.cshtml
+++ b/AdminLTE/Views/Docs/Create.cshtml
@@ -1,5 +1,6 @@
 ﻿@model AdminLTE.Models.Docs
 
+
 @{
     ViewData["Title"] = "Create";
 }
@@ -16,6 +17,17 @@
                 <label asp-for="Id_Usuario" class="control-label"></label>
                 <input asp-for="Id_Usuario" class="form-control" />
                 <span asp-validation-for="Id_Usuario" class="text-danger"></span>
+            </div>
+            <div class="">
+                      <!-- select -->
+                      <div class="form-group">
+                        <label>Select</label>
+                        <select class="form-control">
+                          <option>option 1</option>
+                          <option>option 2</option>
+                        </select>
+                      </div>
+
             </div>
             <div class="form-group">
                 <label asp-for="Tipo_documento" class="control-label"></label>
