--- a/AdminLTE/Views/Docs/Index.cshtml
+++ b/AdminLTE/Views/Docs/Index.cshtml
@@ -13,31 +13,31 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Id)
+               ID
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Id_Usuario)
+               USUARIOS
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Tipo_documento)
+                TIPO DE DOCUMENTO
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Asunto)
+               ASUNTO
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Via)
+                VIA
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Anexo)
+                ANEXO
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Descripcion)
+                DESCRIPCION
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Fecha_Creado)
+                FECHA DE CREACION
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Fecha_Limite)
+                FECHA A ENTREGAR
             </th>
             <th></th>
         </tr>
