--- a/AdminLTE/Views/Docs/Edit.cshtml
+++ b/AdminLTE/Views/Docs/Edit.cshtml
@@ -1,69 +1,106 @@
 ﻿@model AdminLTE.Models.Docs
-
 @{
     ViewData["Title"] = "Edit";
 }
+<div class="card card-yellow m-3">
 
-<h1>Edit</h1>
-
-<h4>Docs</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
+    <div class="card-header">
+        <h3 class="card-title">Editar Documento</h3>
+    </div>
+    <!-- /.card-header -->
+    <div class="card-body">
         <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" />
-            <div class="form-group">
-                <label asp-for="Id_Usuario" class="control-label"></label>
-                <input asp-for="Id_Usuario" class="form-control" disabled/>
-                <span asp-validation-for="Id_Usuario" class="text-danger" ></span>
+
+            <div class="row">
+                <div class="col-sm">
+
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="Tipo_documento" class="control-label"></label>
-                <input asp-for="Tipo_documento" class="form-control" />
-                <span asp-validation-for="Tipo_documento" class="text-danger"></span>
+
+            <div class="row">
+                <div class="col-sm">
+                    <div class="form-group">
+                        <label asp-for="Tipo_documento" class="control-label">Tipo de Documento</label>
+                        <select asp-for="Tipo_documento" class="form-control">
+                            <option></option>
+                            <option>otro</option>
+                            <option>Viaticos</option>
+                            <option>Carta</option>
+                        </select>
+                        <span asp-validation-for="Tipo_documento" class="text-danger"></span>
+                    </div>
+                </div>
+
+                <div class="col-sm">
+                    <div class="form-group">
+                        <label asp-for="Asunto" class="control-label"></label>
+                        <input asp-for="Asunto" class="form-control" />
+                        <span asp-validation-for="Asunto" class="text-danger"></span>
+                    </div>
+                </div>
+
+                <div class="col-sm">
+                    <div class="form-group">
+                        <label asp-for="Fecha_Limite" class="control-label">Fecha Limite</label>
+                        <input asp-for="Fecha_Limite" class="form-control" />
+                        <span asp-validation-for="Fecha_Limite" class="text-danger"></span>
+                    </div>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="Asunto" class="control-label"></label>
-                <input asp-for="Asunto" class="form-control" />
-                <span asp-validation-for="Asunto" class="text-danger"></span>
+
+            <div class="row">
+                <div class="col-sm">
+                    <div class="form-group">
+                        <label asp-for="Via" class="control-label"></label>
+                        <input asp-for="Via" class="form-control" />
+                        <span asp-validation-for="Via" class="text-danger"></span>
+                    </div>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="Via" class="control-label"></label>
-                <input asp-for="Via" class="form-control" />
-                <span asp-validation-for="Via" class="text-danger"></span>
+
+            <div class="row">
+                <div class="col-sm">
+                    <div class="form-group">
+                        <label asp-for="Anexo" class="control-label"></label>
+                        <input asp-for="Anexo" class="form-control" />
+                        <span asp-validation-for="Anexo" class="text-danger"></span>
+                    </div>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="Anexo" class="control-label"></label>
-                <input asp-for="Anexo" class="form-control" />
-                <span asp-validation-for="Anexo" class="text-danger"></span>
+
+            <div class="row">
+                <div class="col-sm">
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <!-- textarea -->
+                            <div class="form-group">
+                                <label asp-for="Descripcion">Descripción</label>
+                                <textarea class="form-control" rows="4" asp-for="Descripcion"  placeholder="Introducir descripción del documento "></textarea>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="Descripcion" class="control-label"></label>
-                <input asp-for="Descripcion" class="form-control" />
-                <span asp-validation-for="Descripcion" class="text-danger"></span>
+
+            <div class="row">
+                <div class="col-sm-2 mx-sm-auto">
+                    <div class="form-group">
+                        <button type="submit" value="Guardar" class="btn btn-block btn-warning">Guardar</button>
+                    </div>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="Fecha_Creado" class="control-label"></label>
-                <input asp-for="Fecha_Creado" class="form-control" disabled/>
+
+            <div class="form-group" style="visibility:hidden; position:absolute">
+                <label asp-for="Fecha_Creado" class="control-label">Fecha Creado</label>
+                <input type="datetime" asp-for="Fecha_Creado" class="form-control" value="@DateTimeOffset.Now" />
                 <span asp-validation-for="Fecha_Creado" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Fecha_Limite" class="control-label"></label>
-                <input asp-for="Fecha_Limite" class="form-control" />
-                <span asp-validation-for="Fecha_Limite" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+            <div class="form-group" style="visibility:hidden; position:absolute">
+                <input type="hidden" asp-for="Id_Usuario" class="form-control" />
             </div>
         </form>
     </div>
 </div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
-
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
