--- a/AdminLTE/Views/Home/Index.cshtml
+++ b/AdminLTE/Views/Home/Index.cshtml
@@ -15,7 +15,7 @@
     <script src="~/lib/plugins/datatables/jquery.dataTables.min.js" asp-append-version="true" ></script>
 </environment>
 
-<div class="box">
+@*<div class="box">
     <div class="box-body table-responsive">
         <table class="table table-condensed table-bordered table-striped" id="TableId" cellspacing="0" align="center">
             <thead>
@@ -42,43 +42,55 @@
             <button class="btn btn-sm btn-primary" type="submit">Submit</button>
         </form>
     </div>
-</div>
+</div>*@
+<div class="col-6 col-md-3 text-center">
+    <input type="text" class="knob" value="100" data-skin="tron" data-thickness="0.2"
+           data-angleArc="250" data-angleOffset="-125" data-width="120" data-height="120"
+           data-fgColor="#00c0ef">
 
-<script>
-    $(document).ready(function () {
-        $('#TableId').DataTable(
-        {
-            searchDelay: 500,
-            "columnDefs": [
-                { "width": "5%", "targets": [0] },
-                { "className": "text-center", "targets": [0, 1, 2, 3, 4, 5, 6] },
-                { "defaultContent": "<button class='btn btn-primary btn-sm'>Details</button>", "targets": [7] },
-                { "searchable": false, "targets": [0,2,4,5,6] },
-                { "render": function (data, type, row) {
-                            return ' <label class="badge label-primary">' + data + '</label>';},
-                  "targets": [4] },
-                { "render": function (data, type, row) {
-                        if (row['quantity'] > 1)
-                            return ' <label class="badge label-success">' + row['quantity'] + '</label>'
-                        else
-                            return ' <label class="badge label-default">' + row['quantity'] + '</label>';},
-                   "targets": [2]},
-            ],
-            "language":
+    <div class="knob-label">data-angleArc="250"</div>
+    </div>
+    <script>
+        $(document).ready(function () {
+            $('#TableId').DataTable(
                 {
-                    "processing": "<div class=''><i class='fa fa-cog fa-spin site-loader-color'></i></div>",
-                    "search": "filter",
-                    "searchPlaceholder": "track num or product"
-                },
-            "processing": true,
-            "serverSide": true,
-            "ajax":
-                {
-                    "url": "/Home/GetData",
-                    "type": "POST",
-                    "dataType": "JSON"
-                },
-            "columns": [
+                    searchDelay: 500,
+                    "columnDefs": [
+                        { "width": "5%", "targets": [0] },
+                        { "className": "text-center", "targets": [0, 1, 2, 3, 4, 5, 6] },
+                        { "defaultContent": "<button class='btn btn-primary btn-sm'>Details</button>", "targets": [7] },
+                        { "searchable": false, "targets": [0, 2, 4, 5, 6] },
+                        {
+                            "render": function (data, type, row) {
+                                return ' <label class="badge label-primary">' + data + '</label>';
+                            },
+                            "targets": [4]
+                        },
+                        {
+                            "render": function (data, type, row) {
+                                if (row['quantity'] > 1)
+                                    return ' <label class="badge label-success">' + row['quantity'] + '</label>'
+                                else
+                                    return ' <label class="badge label-default">' + row['quantity'] + '</label>';
+                            },
+                            "targets": [2]
+                        },
+                    ],
+                    "language":
+                    {
+                        "processing": "<div class=''><i class='fa fa-cog fa-spin site-loader-color'></i></div>",
+                        "search": "filter",
+                        "searchPlaceholder": "track num or product"
+                    },
+                    "processing": true,
+                    "serverSide": true,
+                    "ajax":
+                    {
+                        "url": "/Home/GetData",
+                        "type": "POST",
+                        "dataType": "JSON"
+                    },
+                    "columns": [
                         { "data": "sr" },
                         { "data": "ordertracknumber" },
                         { "data": "quantity" },
@@ -86,11 +98,11 @@
                         { "data": "specialoffer" },
                         { "data": "unitprice" },
                         { "data": "unitpricediscount" },
-            ],
-            "dom": "<'row'<'col-sm-6'l><'col-sm-6'<'#buttonContainer.site-datatable-button-container'>f>>" + "<'row'<'col-sm-12'tr>>" + "<'row'<'col-sm-5'i><'col-sm-7'p>>",
-        });
-        
-        $("#buttonContainer").addClass("float-right").append("<button class='btn btn-sm bg-success'>Create</button>");
+                    ],
+                    "dom": "<'row'<'col-sm-6'l><'col-sm-6'<'#buttonContainer.site-datatable-button-container'>f>>" + "<'row'<'col-sm-12'tr>>" + "<'row'<'col-sm-5'i><'col-sm-7'p>>",
+                });
 
-    });
-</script>
+            $("#buttonContainer").addClass("float-right").append("<button class='btn btn-sm bg-success'>Create</button>");
+
+        });
+    </script>
