--- a/AdminLTE/Views/Shared/_Layout.cshtml
+++ b/AdminLTE/Views/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
         <script src="~/lib/plugins/pace-progress/pace.js" asp-append-version="true"></script>
         <script src="~/js/site.min.js" asp-append-version="true"></script>
     </environment>
-
+    <link href="~/lib/admin-lte/dist/css/adminlte.min.css" rel="stylesheet" />
 </head>
 <!--
 BODY TAG OPTIONS:
@@ -117,6 +117,10 @@ desired effect
     <script src="~/lib/plugins/bootstrap/js/bootstrap.bundle.js"></script>
     <!-- AdminLTE App -->
     <script src="~/lib/admin-lte/dist/js/adminlte.js"></script>
+    <script src="~/lib/admin-lte/dist/js/demo.js"></script>
+    <script src="~/lib/plugins/jquery-knob/jquery.knob.min.js"></script>
+    <script src="~/lib/plugins/sparklines/sparkline.js"></script>
+    <script src="~/lib/admin-lte/dist/js/adminlte.min.js"></script>
     @RenderSection("scripts", required: false)
 </body>
 </html>
