--- a/AdminLTE/Views/Docs/Index.cshtml
+++ b/AdminLTE/Views/Docs/Index.cshtml
@@ -3,18 +3,12 @@
 @{
     ViewData["Title"] = "Index";
 }
-
-<h1>Index</h1>
-
 <p>
     <a asp-action="Create">Create New</a>
 </p>
-<table class="table">
+<table class="table accent-primary">
     <thead>
         <tr>
-            <th>
-               ID
-            </th>
             <th>
                USUARIOS
             </th>
@@ -23,15 +17,6 @@
             </th>
             <th>
                ASUNTO
-            </th>
-            <th>
-                VIA
-            </th>
-            <th>
-                ANEXO
-            </th>
-            <th>
-                DESCRIPCION
             </th>
             <th>
                 FECHA DE CREACION
@@ -46,9 +31,6 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Id)
-            </td>
-            <td>
                 @Html.DisplayFor(modelItem => item.Id_Usuario)
             </td>
             <td>
@@ -56,15 +38,6 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Asunto)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Via)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Anexo)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Descripcion)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Fecha_Creado)
